1. 添加轴温本车信息界面

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
@@ -19,7 +19,7 @@
 
     <SolidColorBrush x:Key="ContentDeepSkyBlueBrush" Color="DeepSkyBlue" />
 
-    <SolidColorBrush x:Key="MainViewProgreeBarBackground" Color="CornflowerBlue" />
+    <SolidColorBrush x:Key="BackgroudBrush" Color="#1A2A3A" />
 
     <SolidColorBrush x:Key="HarwareButtonWhiteBrush" Color="White" />
 
@@ -29,6 +29,8 @@
     <SolidColorBrush x:Key="HarwareButtonRedBrush" Color="Red" />
 
     <SolidColorBrush x:Key="HarwareButtonPressedBackground" Color="Black" />
+
+    <system:Double x:Key="Double30">30</system:Double>
 
     <system:Double x:Key="Double20">20</system:Double>
 
