--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanProgressBarStyle.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanProgressBarStyle.xaml
@@ -90,7 +90,7 @@
         <Setter Property="BorderThickness" Value="3" />
     </Style>
     <Style x:Key="MainBorderStyle2" TargetType="Border">
-        <Setter Property="Background" Value="{StaticResource MainViewProgreeBarBackground}" />
+        <Setter Property="Background" Value="{StaticResource BackgroudBrush}" />
         <Setter Property="BorderBrush" Value="#7E8189" />
         <Setter Property="Margin" Value="2" />
         <Setter Property="Padding" Value="5" />
