--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles.xaml
@@ -46,4 +46,16 @@
         <Setter Property="Foreground" Value="{StaticResource ForegroundOrangeBrush}" />
         <Setter Property="FontSize" Value="{StaticResource Double20}" />
     </Style>
+    <Style x:Key="AxleTextStyle1" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Top" />
+        <Setter Property="Foreground" Value="{StaticResource HarwareButtonWhiteBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource Double30}" />
+    </Style>
+    <Style x:Key="AxleTextStyle2" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Top" />
+        <Setter Property="Foreground" Value="{StaticResource HarwareButtonWhiteBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource Double20}" />
+    </Style>
 </ResourceDictionary>
