--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
@@ -22,6 +22,13 @@
     <system:String x:Key="AxleTemperature" xml:space="preserve">轴 &#13;&#13;温</system:String>
     <system:String x:Key="Axial" xml:space="preserve">轴位</system:String>
     <system:String x:Key="Temperature">温度℃</system:String>
+    <system:String x:Key="AxleTemperaturInfoWindow">轴 温 信 息 窗 口</system:String>
+    <system:String x:Key="AmbientTemperature1">环境温度（1）:</system:String>
+    <system:String x:Key="AmbientTemperature2">环境温度（2）:</system:String>
+    <system:String x:Key="UnitCelsius">单位：℃</system:String>
+    <system:String x:Key="Axis">轴</system:String>
+    <system:String x:Key="Position">位</system:String>
+    <system:String x:Key="AxleTripInfo">开路：’xxx’;短路：’———’;故障：显示红色</system:String>
 
 
 
