--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Shell/TurkmenistanShell.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Shell/TurkmenistanShell.xaml
@@ -6,6 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:shell="clr-namespace:Engine.TCMS.Turkmenistan.View.Shell"
     Title="Engine.TCMS.Turkmenistan"
+    WindowStyle="None"
     Width="800"
     Height="600"
     Loaded="Window_Loaded"
