--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanItemControlStyle.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanItemControlStyle.xaml
@@ -10,7 +10,7 @@
             <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="VerticalAlignment" Value="Stretch" />
-            <Setter Property="Background" Value="{StaticResource MainViewProgreeBarBackground}"></Setter>
+            <Setter Property="Background" Value="{StaticResource BackgroudBrush}"></Setter>
 
             <Setter Property="RenderTransform">
                 <Setter.Value>
@@ -119,7 +119,7 @@
             <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="VerticalAlignment" Value="Stretch" />
-            <Setter Property="Background" Value="{StaticResource MainViewProgreeBarBackground}"></Setter>
+            <Setter Property="Background" Value="{StaticResource BackgroudBrush}"></Setter>
 
             <Setter Property="RenderTransform">
                 <Setter.Value>
