--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/MainView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/MainView.xaml
@@ -294,7 +294,7 @@
                         Grid.Row="0"
                         Grid.RowSpan="2"
                         Grid.Column="1"
-                        Background="{DynamicResource MainViewProgreeBarBackground}"
+                        Background="{DynamicResource BackgroudBrush}"
                         Style="{DynamicResource MainViewBorderStyle2}">
 
                         <common:EffectBorder.EffectContent>
@@ -334,7 +334,7 @@
                 <Border
                     Grid.Row="1"
                     Margin="5"
-                    Background="{DynamicResource MainViewProgreeBarBackground}"
+                    Background="{DynamicResource BackgroudBrush}"
                     BorderBrush="DarkGray"
                     BorderThickness="2">
                     <Grid>
