1. 修改问题单

--- a/Train/Subway.ShiJiaZhuangLine1/Src/Subway.ShiJiaZhuangLine1.Subsystem/Resource/Brushes/BrushResource.xaml
+++ b/Train/Subway.ShiJiaZhuangLine1/Src/Subway.ShiJiaZhuangLine1.Subsystem/Resource/Brushes/BrushResource.xaml
@@ -9,6 +9,6 @@
     <SolidColorBrush x:Key="GreenBrush" Color="#00FF00" />
     <SolidColorBrush x:Key="TransparentBrush" Color="Transparent" />
     <SolidColorBrush x:Key="YellowBrush" Color="Yellow" />
-    <SolidColorBrush x:Key="BackgroundBrush" Color="DarkBlue" />
+    <SolidColorBrush x:Key="BackgroundBrush" Color="#000032" />
 
 </ResourceDictionary>
