--- a/Train/Subway.ShiJiaZhuangLine1/Src/Subway.ShiJiaZhuangLine1.Subsystem/View/Contents/MainContentContents/BoradercastSettingView.xaml
+++ b/Train/Subway.ShiJiaZhuangLine1/Src/Subway.ShiJiaZhuangLine1.Subsystem/View/Contents/MainContentContents/BoradercastSettingView.xaml
@@ -7,13 +7,13 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:Subway.ShiJiaZhuangLine1.Subsystem.ViewModels"
     d:DataContext="{d:DesignInstance viewModels:ShellViewModel}"
-    d:DesignHeight="380"
+    d:DesignHeight="500"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <UserControl.Resources>
         <ResourceDictionary Source="../../../AppResouce.xaml" />
     </UserControl.Resources>
-    <Grid>
+    <Grid Margin="0,0,0,20">
         <Grid.Resources>
             <Style x:Key="Raido1" TargetType="RadioButton">
                 <Setter Property="Background" Value="{StaticResource ItemBackgroudBrush}" />
