--- a/Train/Subway.ShiJiaZhuangLine1/Src/Subway.ShiJiaZhuangLine1.Subsystem/View/Contents/ShellContentMainContentView.xaml
+++ b/Train/Subway.ShiJiaZhuangLine1/Src/Subway.ShiJiaZhuangLine1.Subsystem/View/Contents/ShellContentMainContentView.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="50*" />
         </Grid.RowDefinitions>
         <ContentControl regions:RegionManager.RegionName="{x:Static constant:RegionNames.MainContentHeaderRegion}" />
-        <ContentControl Grid.Row="1" regions:RegionManager.RegionName="{x:Static constant:RegionNames.MainContentContentRegion}" />
-        <ContentControl Grid.Row="2" regions:RegionManager.RegionName="{x:Static constant:RegionNames.MainContentFootterRegion}" />
+        <ContentControl Grid.RowSpan="2" Grid.Row="1" regions:RegionManager.RegionName="{x:Static constant:RegionNames.MainContentContentRegion}" />
+        <!--<ContentControl Grid.Row="2" regions:RegionManager.RegionName="{x:Static constant:RegionNames.MainContentFootterRegion}" />-->
     </Grid>
 </UserControl>
